# API-Detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api_checker_config.example.json  build_and_package.bat  build_gui.bat  example_keys.txt  package_dependencies.bat
.github/workflows/: release.yml
gui/: api_input_widget.cpp  api_input_widget.h  checker_thread.cpp  checker_thread.h  dark_theme.qss  gui_main.cpp  history_widget.cpp  history_widget.h  main_window.cpp  main_window.h  resources.qrc  result_widget.cpp  result_widget.h  settings_widget.cpp  settings_widget.h
include/: api_checker.h  config_manager.h  file_utils.h  http_client.h
launcher/: launcher_main.cpp  launcher_window.cpp  launcher_window.h
src/: api_checker.cpp  config_manager.cpp  file_utils.cpp  http_client.cpp
